--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=20.0.0",
