--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "express": "^4.18.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.4",
+    "mongoose": "^7.8.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "node-status": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
