--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.663.0",
+    "@aws-sdk/credential-provider-node": "^3.662.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^1.4.2",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "gridfs-stream": "^1.1.1",
@@ -24,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "multer-s3": "^3.0.1",
     "node-status": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
